# revelsmd

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Example 1.ipynb  Example 2.ipynb  Example 3.ipynb  Example 4.ipynb  Example_1.ipynb  README.md  bu.py  pyproject.toml  revelsmd.py  setup.py
.github/workflows/: tests.yml
.nova/: Configuration.json
docs/: Example_1.ipynb  Example_2.ipynb  Example_3.ipynb  Example_4.ipynb  requirements.txt  triangular_deposition_normalisation.md  tutorial.rst
docs/source/: api.rst  conf.py  history.rst  index.md  index.rst  modules.rst  tutorials.rst
docs/source/_scripts/: generate_density_figure.py  generate_rdf_figure.py
docs/source/api/: density.md  index.md  modules.rst  rdf.md  revelsMD.revels_rdf.rst  revelsMD.revels_tools.conversion_factors.rst  revelsMD.revels_tools.lammps_parser.rst  revelsMD.revels_tools.rst  revelsMD.revels_tools.vasp_parser.rst  revelsMD.rst  revels_3D.rst  supporting.md  trajectories.md
docs/source/contributing/: conventions.md  development-setup.md  index.md  new-trajectory-backend.md
docs/source/explanation/: architecture.md  block-averaging.md  force-sampling.md  index.md  kernels.md  variance-reduction.md
docs/source/getting-started/: installation.md  quickstart.md
docs/source/how-to/: blocking.md  density-types.md  export-results.md  index.md  lambda-weighting.md  numpy-interface.md  performance-tuning.md  rigid-molecules.md
docs/source/notebooks/: Example_1.ipynb  Example_2.ipynb  Example_3.ipynb  Example_4.ipynb
docs/source/tutorials/: 3d-densities.md  first-rdf.md  index.md  trajectory-formats.md
examples/example_1_LJ/: data.fin.nh  data.fin.nh.data  data.min.nh  lj.lmp  log.lammps
examples/example_2_LJ_3D/: data.fin.nh  data.fin.nh.data  data.min.nh  dump.nh.lammps  lj.lmp  log.lammps
revelsMD/: __init__.py  backends.py  cell.py  frame_sources.py  grid_helpers.py  grid_helpers_numba.py  rdf_helpers.py  rdf_helpers_numba.py  revels_3D.py  revels_rdf.py  statistics.py  trajectory_states.py
revelsMD/density/: __init__.py  constants.py  density_grid.py  estimators.py  grid_helpers.py  grid_helpers_numba.py  grid_state.py  helper_functions.py  selection.py  selection_state.py
revelsMD/density/writers/: cube.py
revelsMD/rdf/: __init__.py  rdf.py  rdf_class.py  rdf_helpers.py  rdf_helpers_numba.py
revelsMD/revels_tools/: conversion_factors.py  lammps_parser.py  vasp_parser.py
revelsMD/trajectories/: __init__.py  _base.py  lammps.py  mda.py  numpy.py  vasp.py
revelsMD/utils/: __init__.py  conversion_factors.py
revelsmd/: __init__.py  revels_3D.py  revels_rdf.py  trajectory_states.py
revelsmd/revels_tools/: lammps_parser.py  vasp_parser.py
scripts/: create_vasp_subset.py  generate_reference_data.py  generate_validation_plots.py  investigate_binning_offset.py  test_rdf_harmonic_potential.py  validate_water_rdf.py
tests/: conftest.py  test_backends.py  test_cell.py  test_conversion_factors.py  test_cube_writer.py  test_density.py  test_density_constants.py  test_frame_sources.py  test_grid_helpers.py  test_lammps_parser.py  test_rdf_class.py  test_rdf_helpers.py  test_rdf_package.py  test_revels_3D.py  test_revels_rdf.py  test_statistics.py  test_trajectories.py  test_trajectory_states.py  test_vasp_parser.py
tests/integration/: README.md  __init__.py  conftest.py  test_analytical_reference.py  test_cross_backend_consistency.py  test_loader_analysis_matrix.py  test_make_force_grid_configurations.py  test_pipeline_3d_lj.py  test_pipeline_rdf.py  test_pipeline_rigid_water.py  test_pipeline_vasp.py  test_regression.py
