[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "revelsMD"
authors = [{name = "Samuel Coles", email = "swc57@bath.ac.uk"}]
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = [
    "ase",
    "lxml",
    "MDAnalysis >=2.4.2",
    "numpy",
    "pymatgen",
    "scipy >=1.9.3",
    "tqdm",
]

[project.optional-dependencies]
docs = ["recommonmark"]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["revelsMD"]
branch = true

[tool.coverage.report]
show_missing = true
