[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "revelsMD"
authors = [{name = "Samuel Coles", email = "swc57@bath.ac.uk"}]
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = [
    "ase",
    "lxml",
    "MDAnalysis >=2.4.2",
    "numba",
    "numpy",
    "pymatgen",
    "scipy >=1.9.3",
    "tqdm",
]

[project.optional-dependencies]
docs = ["recommonmark"]
test = ["pytest", "pytest-cov", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "analytical: tests against known analytical results",
    "regression: regression tests against stored reference data",
    "requires_example1: requires Example 1 data (~12MB)",
    "requires_example2: requires Example 2 data (~500MB)",
    "requires_example4: requires Example 4 data (~1.7GB)",
]
filterwarnings = [
    "ignore::DeprecationWarning:MDAnalysis.*:",
]

[tool.coverage.run]
source = ["revelsMD"]
branch = true

[tool.coverage.report]
show_missing = true
