[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "revelsMD"
authors = [
    {name = "Samuel Coles", email = "swc57@bath.ac.uk"},
    {name = "Benjamin J. Morgan", email = "b.j.morgan@bath.ac.uk"}
]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["molecular-dynamics", "radial-distribution-function", "density", "force-sampling", "reduced-variance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase",
    "lxml",
    "MDAnalysis >=2.4.2",
    "numba",
    "numpy",
    "pymatgen",
    "scipy >=1.9.3",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/user200000/revelsmd"
Repository = "https://github.com/user200000/revelsmd"

[project.optional-dependencies]
docs = ["recommonmark"]
test = ["pytest", "pytest-cov", "pytest-mock", "mypy", "types-tqdm", "scipy-stubs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "analytical: tests against known analytical results",
    "regression: regression tests against stored reference data",
    "requires_example1: requires Example 1 data (~12MB)",
    "requires_example2: requires Example 2 data (~500MB)",
    "requires_example4: requires Example 4 data (~1.7GB)",
]
filterwarnings = [
    "ignore::DeprecationWarning:MDAnalysis.*:",
]

[tool.coverage.run]
source = ["revelsMD"]
branch = true

[tool.coverage.report]
show_missing = true
